# E-Commerce-Inventory-Management-

./: CMakeLists.txt
data/: categories.csv  customers.csv  orders.csv  products.csv  users.csv
include/: AuthManager.h  Cart.h  Checkout.h  Customer.h  FileManager.h  Inventory.h  MenuManager.h  Models.h  Order.h  Product.h  SalesReport.h  SearchFilter.h  StockTracking.h  User.h
src/: AuthManager.cpp  Cart.cpp  Checkout.cpp  Customer.cpp  FileManager.cpp  Inventory.cpp  MenuManager.cpp  Order.cpp  Product.cpp  SalesReport.cpp  SearchFilter.cpp  StockTracking.cpp  User.cpp  main.cpp
